--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -17,9 +17,19 @@
 }
 .swiper .swiper-button-prev::after{
    content: " ";
+   background-image: url('https://cdn.shopify.com/s/files/1/0672/4776/7778/files/arrow-left.svg');
+   width: 40px;
+   height: 40px;
+   background-position: center;
+   background-repeat: no-repeat;
 }
 .swiper .swiper-button-next::after{
-   content: " ";
+   content:" " ;
+   background-image: url("https://cdn.shopify.com/s/files/1/0672/4776/7778/files/arrow-right.svg");
+   width: 40px;
+   height: 40px;
+   background-position: center;
+   background-repeat: no-repeat;
 }
  .swiper .swiper-button-next{
   /* content: ">"; */
