--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -48,6 +48,25 @@
 
 }
 
+.announcement-bar { 
+  text-align: center;
+  background-color: rgb(28, 112, 132);
+  color: #ffffff;
+}
+
+.announcement-bar p { 
+  padding: 10px 0;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  line-height: 19.8px;
+  font-size: 18px;
+}
+
+.subscriptionlabel {
+  cursor: pointer;
+}
+
 .carousel__slider {
   max-height: 400px;
 }
