--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -94,3 +94,11 @@
 ::backdrop {
   background-color: rgba(0,0,0,.75);
 }
+
+.ball-circle {
+  width: 30px;
+  height: 30px;
+  background-color: #425b34;
+  display: inline-block;
+  border-radius: 20px;
+}
