--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,4 +1,4 @@
- .swiper .swiper-button-prev{
+.swiper .swiper-button-prev {
   /* content: "<"; */
   height: 40px;
   width: 40px;
@@ -9,28 +9,26 @@
   background-color: #00000066;
   transition: 0.3s ease;
 }
-.swiper .swiper-button-prev:hover{
+.swiper .swiper-button-prev:hover {
   background-color: #000;
-
-
 }
-.swiper .swiper-button-prev::after{
-   content: " ";
-   background-image: url('https://cdn.shopify.com/s/files/1/0672/4776/7778/files/arrow-left.svg');
-   width: 40px;
-   height: 40px;
-   background-position: center;
-   background-repeat: no-repeat;
+.swiper .swiper-button-prev::after {
+  content: ' ';
+  background-image: url('https://cdn.shopify.com/s/files/1/0672/4776/7778/files/arrow-left.svg');
+  width: 40px;
+  height: 40px;
+  background-position: center;
+  background-repeat: no-repeat;
 }
-.swiper .swiper-button-next::after{
-   content:" " ;
-   background-image: url("https://cdn.shopify.com/s/files/1/0672/4776/7778/files/arrow-right.svg");
-   width: 40px;
-   height: 40px;
-   background-position: center;
-   background-repeat: no-repeat;
+.swiper .swiper-button-next::after {
+  content: ' ';
+  background-image: url('https://cdn.shopify.com/s/files/1/0672/4776/7778/files/arrow-right.svg');
+  width: 40px;
+  height: 40px;
+  background-position: center;
+  background-repeat: no-repeat;
 }
- .swiper .swiper-button-next{
+.swiper .swiper-button-next {
   /* content: ">"; */
   height: 40px;
   width: 40px;
@@ -41,22 +39,20 @@
   background-color: #00000066;
   transition: 0.3s ease;
 }
-.swiper .swiper-button-next:hover{
+.swiper .swiper-button-next:hover {
   background-color: #000;
-
-
 }
 
-.announcement-bar { 
+.announcement-bar {
   text-align: center;
   background-color: rgb(28, 112, 132);
   color: #ffffff;
 }
 
-.announcement-bar p { 
+.announcement-bar p {
   padding: 10px 0;
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 600;
   line-height: 19.8px;
   font-size: 18px;
@@ -70,7 +66,7 @@
   max-height: 400px;
 }
 
-.product-grid .img-wrapper{
+.product-grid .img-wrapper {
   cursor: pointer;
 }
 
@@ -91,7 +87,7 @@
 }
 
 ::backdrop {
-  background-color: rgba(0,0,0,.75);
+  background-color: rgba(0, 0, 0, 0.75);
 }
 
 .ball-circle {
@@ -100,4 +96,12 @@
   background-color: #425b34;
   display: inline-block;
   border-radius: 20px;
+}
+
+.shadow-none {
+  -webkit-box-shadow: none;
+}
+
+.focus\:outline-none:focus {
+  -webkit-box-shadow: none !important;
 }
