--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -101,3 +101,9 @@
 .webkit-box-shadow-none {
   -webkit-box-shadow: none !important;
 }
+
+.mobile-cart .cart-line-quantity {
+}
+.mobile-cart .cart-line-quantity > div {
+  width: 100%;
+}
