--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -12,4 +12,12 @@
   * {
     outline: none;
   }
+
+  a {
+    @apply inline-block;
+  }
+
+  .absolute-center {
+    @apply absolute -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2;
+  }
 }
