--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -6,7 +6,8 @@
 
 @layer base {
   html {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Dunbar', 'Roboto', sans-serif;
+    letter-spacing: 1px;
   }
 
   * {
