--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -8,6 +9,7 @@
   html {
     font-family: 'Dunbar', 'Roboto', sans-serif;
     letter-spacing: 1px;
+    line-height: 1;
   }
 
   * {
@@ -20,5 +22,9 @@
 
   .absolute-center {
     @apply absolute -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2;
+  }
+
+  .sm.absolute-center {
+    @apply sm:absolute sm:-translate-x-1/2 sm:-translate-y-1/2 sm:top-1/2 sm:left-1/2;
   }
 }
