--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -7,9 +7,7 @@
 
 @layer base {
   html {
-    font-family: 'Dunbar', 'Roboto', sans-serif;
-    letter-spacing: 1px;
-    line-height: 1;
+    font-family: 'Roboto', sans-serif;
   }
 
   * {
