change: to self-hosting

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -386,3 +386,23 @@ button.free-gift-label {
 .bg-second-info-image-2 {
   background-image: url('../assets/images/bg-second-info-image-2.png');
 }
+
+.bg-pig {
+  background-image: url('../assets/images/Group_4179_2x_c20de474-5eef-421d-a248-f3a6c09ae36a.webp');
+}
+
+.bg-pnser {
+  background-image: url('../assets/images/PNSER.webp');
+}
+
+.bg-farm {
+  background-image: url('../assets/images/Farm_BG_Just_Meats.webp');
+}
+
+.bg-cock {
+  background-image: url('../assets/images/Group_4161.webp');
+}
+
+.bg-house {
+  background-image: url('../assets/images/orderpage_bg.png');
+}
