add: basic banner

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -406,3 +406,7 @@ button.free-gift-label {
 .bg-house {
   background-image: url('../assets/images/orderpage_bg.png');
 }
+
+.bg-rich-froning-banner {
+  background-image: url('../assets/images/rich-froning-banner.png');
+}
