add: how it works section

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -414,3 +414,11 @@ button.free-gift-label {
 .bg-rich-froning-banner {
   background-image: url('../assets/images/rich-froning-banner.png');
 }
+
+.bg-yellow-pattern {
+  background-image: url('../assets/images/7e0c002b6aef76e3311b714b92b70294.jpg');
+}
+
+.bg-JustMeatsPartnershipsWithRichFroningImage {
+  background-image: url('../assets/images/d846c1f67f55ccfe07c25f1c0124d640.jpg');
+}
