add: learn more section

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -422,3 +422,11 @@ button.free-gift-label {
 .bg-JustMeatsPartnershipsWithRichFroningImage {
   background-image: url('../assets/images/d846c1f67f55ccfe07c25f1c0124d640.jpg');
 }
+
+.bg-rich-froning-learn-more {
+  background-image: url('../assets/images/46d7bfd1d15cd6fcf26b387428b1a213.png');
+}
+
+.bg-rich-froning-learn-more-lightPattern1 {
+  background-image: url('../assets/images/lightPattern1.png');
+}
