add: lower footer section

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -430,3 +430,7 @@ button.free-gift-label {
 .bg-rich-froning-learn-more-lightPattern1 {
   background-image: url('../assets/images/lightPattern1.png');
 }
+
+.bg-lower-footer {
+  background-image: url('../assets/images/lower-footer1.png');
+}
