--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -406,3 +406,19 @@ button.free-gift-label {
 .bg-house {
   background-image: url('../assets/images/orderpage_bg.png');
 }
+/* Custom scrollbar styles for cart_lines_scrollbar */
+.cart_lines_scrollbar::-webkit-scrollbar {
+  width: 8px;
+    background-color: #f5f5f5;
+}
+
+.cart_lines_scrollbar::-webkit-scrollbar-track {
+  border: 1px solid #707070;
+    background-color: #f5f5f5;
+}
+
+.cart_lines_scrollbar::-webkit-scrollbar-thumb {
+  background-color: #1c7084;
+  
+}
+
