--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -450,4 +450,22 @@ button.free-gift-label {
 .bg-lower-footer {
   background-image: url('../assets/images/lower-footer1.png');
 }
-
+.slick-prev:before, .slick-next:before {
+  font-size: 41px !important;
+  color: #908F8E !important;
+}
+.slick-dots li button{
+  background-color: transparent !important;
+  border: 2px solid #fff !important;
+  border-radius: 50% !important;
+}
+.slick-dots li.slick-active button:before{
+  color: #fff !important;
+  font-size: 10px !important;
+}
+.slick-slider .slick-track, .slick-slider .slick-list{
+  text-align: center !important;
+}
+.slick-dots {
+  bottom: -39px !important;
+}
