--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -488,3 +488,9 @@ section.product-list-slider button.slick-arrow.slick-prev {
 section.product-list-slider button.slick-arrow.slick-next {
   @apply sm:right-[-25px] z-10 right-[5px];
 }
+.select-hover:hover select {
+  @apply bg-[url(https://cdn.shopify.com/s/files/1/0672/4776/7778/files/icon-select.svg?v=1713469358)];
+}
+.bg-white.select-hover select {
+  @apply bg-[url(https://cdn.shopify.com/s/files/1/0672/4776/7778/files/icon-select.svg?v=1713469358)];
+}
