--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -555,3 +555,19 @@ section.product-list-slider button.slick-arrow.slick-next {
 .how-it-works-slider .swiper-pagination {
   @apply sm:hidden block;
 }
+
+.order-images-slider span.swiper-pagination-bullet {
+  @apply w-4 h-4 bg-transparent opacity-100 relative border-2 border-solid border-[white];
+  background: transparent !important;
+}
+.order-images-slider
+  span.swiper-pagination-bullet.swiper-pagination-bullet-active:before {
+  @apply content-[""] absolute h-2 w-2 content-[var(--tw-content)] rounded-[50%] left-2/4 top-2/4;
+  --tw-translate-x: -50%;
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y))
+    rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y))
+    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  --tw-content: "";
+  background: white;
+}
