--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -593,7 +593,7 @@ section.product-list-slider button.slick-arrow.slick-next {
 
 .sticky-header {
   @apply visible opacity-100 translate-y-0 transition-transform duration-[0.2s] ease-linear shadow-[0_2px_10px_2px_#0000000f] fixed z-[99] border-b-[rgba(29,29,29,0.1)] border-b border-solid left-0 top-0;
-  background: "!EEEEEE !important";
+  background: "#EEEEEE !important";
   position: fixed !important;
 }
 
