--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -407,17 +407,19 @@ button.free-gift-label {
 
 /* Custom scrollbar styles for cart_lines_scrollbar */
 .cart_lines_scrollbar::-webkit-scrollbar {
-  width: 8px;
-  background-color: #f5f5f5;
+  width: 4px;
+  background-color: none;
 }
 
 .cart_lines_scrollbar::-webkit-scrollbar-track {
-  border: 1px solid #707070;
-  background-color: #f5f5f5;
+  border: none;
+  border-radius: 4px;
+  background-color: none;
 }
 
 .cart_lines_scrollbar::-webkit-scrollbar-thumb {
-  background-color: #1c7084;
+  border-radius: 4px;
+  background-color: #637160;
 }
 
 .bg-rich-froning-banner {
