update: mobile cart

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -640,3 +640,7 @@ section.product-list-slider button.slick-arrow.slick-next {
 .custom-select::-ms-expand {
   @apply !hidden;
 }
+
+.mobile-cart .plan-picker-freq-div {
+  @apply !px-0;
+}
