change: cart mobile scroll bg color

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -522,7 +522,7 @@ button.free-gift-label {
 
 .cart_lines_scrollbar::-webkit-scrollbar-thumb {
   border-radius: 4px;
-  background-color: #637160;
+  background-color: #6b1626;
 }
 
 .bg-rich-froning-banner {
