--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -629,6 +629,40 @@ button.free-gift-label {
 .featuredSlider .slick-dots li.slick-active button:before {
   color: #7a392d !important;
 }
+.homeFeaturedSlider .slick-slide > div {
+  margin: 0 10px;
+}
+.homeFeaturedSlider .slick-list {
+  margin: 0 -10px;
+}
+.homeFeaturedSlider .slick-dots li {
+  width: 10px;
+  height: 10px;
+}
+.homeFeaturedSlider .slick-dots li button {
+  width: 10px;
+  height: 10px;
+  font-size: 0;
+  background-color: #151515 !important;
+  border: 0px solid #222222 !important;
+  border-radius: 50% !important;
+  padding: 0 !important;
+  margin-top: 4px !important;
+}
+.homeFeaturedSlider .slick-dots li button:before {
+  width: 10px;
+  height: 10px;
+  padding: 0 !important;
+}
+.homeFeaturedSlider .slick-dots {
+  bottom: 0px !important;
+}
+.homeFeaturedSlider .slick-dots li.slick-active button:before {
+  width: 10px;
+  height: 10px;
+  color: #7a392d !important;
+  padding: 0 !important;
+}
 .productsSlider .slick-track {
   display: flex !important;
   gap: 22px !important;
